# radial-dots-virtual-dom-rs

./: Cargo.toml  Makefile  README.md  index.html  index.js  package.json  webpack.config.js
scripts/: dev-server.sh
src/: DrawingStyle.rs  drawing_style.rs  float_utils.rs  geom.rs  lib.rs  start.rs  utf_to_binary.rs
src/components/: application.rs
src/fig/: Diagram.rs  Dot.rs  TextPath.rs  diagram.rs  dot.rs  mod.rs  text_path.rs
src/svg/: SvgDrawable.rs  mod.rs  svg_drawable.rs  util.rs
static/: style.css
