[package]
name = "radial_dots"
version = "0.1.0"
authors = ["Maxwell Huang-Hobbs <mhuan13@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.40"
css-rs-macro = "0.1.0"
virtual-dom-rs = "0.6.7"
base64 = "0.10.1"

[dependencies.web-sys]
version = "0.3.17"
features = [
    "Window",
    "Document",
    "Element",
    "console",
]
